fixed doctor's modals on mobile

--- a/styles/__about.scss
+++ b/styles/__about.scss
@@ -250,7 +250,7 @@
     overflow: hidden;
     @include responsive_tab() {
       border-radius: 0;
-      overflow: inherit;
+      overflow: unset!important;
     }
   }
 
